# Flappy-Bird

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md
include/: AssetManager.h  Background.h  Bird.h  Collision.h  DEFINITIONS.h  Flash.h  Game.h  GameOverState.h  GameState.h  Hud.h  InputManager.h  Land.h  MainMenuState.h  Pipe.h  Rng.h  SoundManager.h  SplashState.h  State.h  StateMachine.h  config.h.in
src/: AssetManager.cpp  Background.cpp  Bird.cpp  Collision.cpp  Flash.cpp  Game.cpp  GameOverState.cpp  GameState.cpp  Hud.cpp  InputManager.cpp  Land.cpp  MainMenuState.cpp  Pipe.cpp  Rng.cpp  SoundManager.cpp  SplashState.cpp  StateMachine.cpp  main.cpp
